Add GitHub link to _config.yml
Added a centered GitHub link to the configuration.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 theme: jekyll-theme-minimal
 title: Bryan Barrios Carlier
 description: Data Analyst Junior | SQL | Power BI | Business Insights
+
+<div style="text-align:center; margin-top:20px;">
+<a href="https://github.com/bryan1306" 
+style="background:black; color:white; padding:10px 20px; border-radius:8px; text-decoration:none;">
+Ver GitHub
+</a>
+</div>
