--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 theme: jekyll-theme-minimal
 title: Bryan Barrios Carlier
+<p align="center">
+  <img src="assets/foto.jpeg" width="180" style="border-radius: 50%;" />
+</p>
 description: Data Analyst Junior | SQL | Power BI | Business Insights
 
