--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Bryan Barrios Carlier
 description: Data Analyst Junior | SQL | Power BI | Business Insights
-logo: assets/foto.jpg
+logo: assets/foto.jpeg
 theme: jekyll-theme-minimal
